--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>New Year 2024.</h1>
+    <h1>New Year 2024</h1>
     <div class="countdown-container">
         <div class="countdown-el days-c">
             <p class="big-text" id="days">0</p>
