--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="countdown-el minutes-c">
             <p class="big-text" id="minutes">0</p>
-                <span>minutes</span>
+                <span>minutehs</span>
         </div>
         <div class="countdown-el seconds-c">
             <p class="big-text" id="seconds">0</p>
